# ai-question-generator

./: README.md
backend/: .gitignore  pyproject.toml  server.py
backend/src/: ai_generator.py  app.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py  webhooks.py
frontend--/: .env  package-lock.json  package.json
frontend--/src/: App.jsx
frontend--/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend--/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend--/src/history/: HistoryPanel.jsx
frontend--/src/layout/: Layout.jsx
frontend--/src/utils/: api.js
