[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clerk-backend-api>=6.0.1",
    "fastapi>=0.121.3",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "svix>=1.96.0",
    "uvicorn>=0.38.0",
]
